[gd_scene load_steps=5 format=2]

[ext_resource path="res://HardwareSlot.gd" type="Script" id=1]
[ext_resource path="res://Assets/border.png" type="Texture" id=2]
[ext_resource path="res://Assets/directory.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.9537, 13.8174 )

[node name="HardwareSlot" type="Node2D"]
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 1 )
good = Color( 0.396078, 0.960784, 0.0117647, 1 )
bad = Color( 0.913725, 0.0392157, 0.0392157, 1 )
nop = Color( 1, 1, 1, 1 )

[node name="border" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="typeIcon" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
one_way_collision = true

[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_Area2D_area_shape_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
